# imagemanipulation

./: CMakeLists.txt  CompilingNotes.txt  README.md  main.cpp
